--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <h3>o'zim uchun</h3>
     <h2>Bilol</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt fugiat quo a. Laboriosam ab quas cumque facilis porro odit. Quod et sunt ex doloremque a hic possimus vero, aspernatur recusandae.</p>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
         crossorigin="anonymous"></script>
