--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
     <h3>o'zim uchun</h3>
     <h2>Bilol</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt fugiat quo a. Laboriosam ab quas cumque facilis porro odit. Quod et sunt ex doloremque a hic possimus vero, aspernatur recusandae.</p>
+    <br>
+    <div class="brend">
+        <div class="row">
+            <div class="col-md-4"><img src="./images/solution/Frame (2).png" alt=""></div>
+            <div class="col-md-4"><img src="./images/solution/Frame (3).png" alt=""></div>
+            <div class="col-md-4"><img src="./images/solution/Frame (4).png" alt=""></div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
         crossorigin="anonymous"></script>
