--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
+    <ul class="nav justify-content-end">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
     <h3>o'zim uchun</h3>
     <h2>Bilol</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt fugiat quo a. Laboriosam ab quas cumque facilis porro odit. Quod et sunt ex doloremque a hic possimus vero, aspernatur recusandae.</p>
