--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt fugiat quo a. Laboriosam ab quas cumque facilis porro odit. Quod et sunt ex doloremque a hic possimus vero, aspernatur recusandae.</p>
     <br>
     <div class="brend">
-        <div class="row">
-            <div class="col-md-3 bg-info text-center m-5"><img src="./images/solution/Frame (2).png" alt=""></div>
-            <div class="col-md-3 bg-info text-center m-5"><img src="./images/solution/Frame (3).png" alt=""></div>
-            <div class="col-md-3 bg-info text-center m-5"><img src="./images/solution/Frame (4).png" alt=""></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 bg-light text-center"><img src="./images/solution/Frame (2).png" alt=""></div>
+                <div class="col-md-3 bg-light text-center"><img src="./images/solution/Frame (3).png" alt=""></div>
+                <div class="col-md-3 bg-light text-center"><img src="./images/solution/Frame (4).png" alt=""></div>
+            </div>
         </div>
     </div>
 
