--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">
-              <img src="./img/Logo.png" alt="">
+              <img style="margin-bottom: 2px;" src="./img/Logo.png" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
               aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +44,7 @@
                 <li class="nav-item mx-3">
                   <a class="nav-link" href="#">Login</a>
                 </li>
-                <button class="btn btn-outline-dark mx-3" type="submit">Sign up</button>
+                <button class="btn btn-outline-dark mx-3" style="margin-bottom: 2px;" type="submit">Sign up</button>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                     data-bs-toggle="dropdown" aria-expanded="false">
