davom ettir Bilol

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <li class="nav-item mx-3">
                   <a class="nav-link" href="#">Login</a>
                 </li>
-                <button class="btn btn-outline-dark mx-3" style="margin-bottom: 2px;" type="submit">Sign up</button>
+                <button class="btn btn-outline-dark mx-3" style="margin: 2px;" type="submit">Sign up</button>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                     data-bs-toggle="dropdown" aria-expanded="false">
